--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,14 +1,17 @@
-server.port: 8090
+#server.port: 8090
 
-#server:
-#  ssl:
-#    key-store: classpath:keystore.jks
-#    key-store-password: password
-#    key-store-type: jks
-#    key-alias: tomcat
-#    key-password: password
-#  port: 9443
+server:
+  ssl:
+    key-store: classpath:keystore.jks
+    key-store-password: password
+    key-store-type: jks
+    key-alias: tomcat
+    key-password: password
+  port: 9443
+
 
 logging.level.org.springframework:
-  web.socket.messaging: ERROR
+  web:
+    #servlet: DEBUG
+    socket.messaging: ERROR
   messaging: ERROR
